# ecovibe-concierge

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  main.py  pyproject.toml
deployment/: Dockerfile  cloud-run.yaml
memory/: memory_manager.py  user_profile.json
modules/: orchestrator.py
orchestrator/: AGENTS.md  SKILL.md
scripts/: eco-stop.sh  models.py  setup-iam-.sh  setup-iam.sh
skills/: SKILL.md
skills/planner-skill/: SKILL.md
skills/researcher-skill/: SKILL.md
templates/: index.html
tests/: test_agent_routing.py  test_red_team_simulation.py  test_red_team_simulation_green.py
tests/features/: agent_routing.feature
tools/: emission_calculator.py
