[project]
name = "ecovibe-concierge"
version = "0.1.0"
description = "Multi-Agent EcoVibe Concierge - 5-Day AI Agents Capstone Project"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform>=1.70.0",
    "google-cloud-storage>=2.18.0",
    "google-auth>=2.35.0",
    "google-cloud-logging>=3.11.0",
    "google-cloud-firestore>=2.28.0",
    "google-genai>=1.1.1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "rich>=15.0.0",
    "jinja2>=3.1.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "anyio>=4.0.0",
    "pytest-bdd>=7.0.0",
]

# Ensure pytest always resolves the project root for imports
[tool.pytest.ini_options]
pythonpath = [
    ".",
    "tests"
]

# Optional: Lock file settings
[tool.uv.sources]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ['py312']